--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -189,3 +189,21 @@ footer .footer-contents {
     display: none;
   }
 }
+
+body {
+  padding-top: 54px;
+}
+
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
+}
+
+.card {
+  height: 100%;
+}
+
+.fa-cog {
+  color: red;
+}
