--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,6 +21,14 @@
     z-index: 10000;
 }
 
+#askforToken {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 10000;
+}
+
 .no-close .ui-dialog-titlebar-close {
   display: none;
 }
